[package]
name = "howdy"
version = "0.5.0"
authors = ["Daniil Sunyaev <dasforrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
gnuplot = "0.0.37"
