[package]
name = "howdy"
version = "0.6.1"
authors = ["Daniil Sunyaev <dasforrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#TODO: use dev-dependencies

[dependencies]
chrono = "0.4"
gnuplot = "0.0.37"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "2.1"
